# idrpred

./: .gitattributes  Dockerfile  MANIFEST.in  README.md  pyproject.toml
benchmarks/1M-random/: README.md  resources_usage.json
benchmarks/a-thaliana/: resources_usage.json
benchmarks/d-melanogaster/: resources_usage.json
benchmarks/e-coli/: resources_usage.json
benchmarks/h-sapiens/: resources_usage.json
benchmarks/s-cerevisiae/: resources_usage.json
src/idrpred/: __init__.py  idrpred.py  seg.py
